2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* ia64-dis.c (print_insn_ia64): Generate symbolic names for cr
	registers instead of register number.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

	* gas/elf/elf.exp (run_elf_list_test): Fix typo.

2007-11-07  Tristan Gingold  <gingold@adacore.com>

        * gas/ppc/test1xcoff32.d: Updated to match RTOC bug fix.

2007-11-06  Paul Brook  <paul@codesourcery.com>

	* gas/arm/mul-overlap.s: Add umull and smlal.
	* gas/arm/mul-overlap.l: Update expected results.

2007-11-06  Nick Clifton  <nickc@redhat.com>

	* gas/elf/elf.exp: Disable ehopt test for mn10300.

2007-11-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.d: New.
	* gas/i386/i386.s: Likewise.

	* gas/i386/i386.exp: Run i386.

	* gas/i386/x86_64.s: Add tests for movsx, movsbl, movsbq,
	movsbw, movswl, movswq, movzx, movzb, movzbl, movzbq,
	movzbw, movzwl and movzwq.
	* gas/i386/x86_64.d: Updated.

2007-10-31  Nick Clifton  <nickc@redhat.com>

	* gas/cfi/cfi-common-6.d: Allow for possible relocation of the
	.debug.eh_frame section.

2007-10-30  Nick Clifton  <nickc@redhat.com>

	* gas/all/gas.exp: Do not run diff1.s test for mn10300.

2007-10-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/5221
	* gas/elf/elf.exp: Run section7.

	* gas/elf/section7.d: New.
	* gas/elf/section7.s: Likewise.

2007-10-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/katmai.s: Remove cmpps opcode test.

	* gas/i386/simd.s: Add tests for cmpss and cmpsd.
	* gas/i386/x86-64-simd.s: Likewise.

	* gas/i386/katmai.d: Updated.
	* gas/i386/simd-intel.d: Likewise.
	* gas/i386/simd-suffix.d: Likewise.
	* gas/i386/simd.d: Likewise.
	* gas/i386/x86-64-simd-intel.d: Likewise.
	* gas/i386/x86-64-simd-suffix.d: Likewise.
	* gas/i386/x86-64-simd.d: Likewise.

2007-10-19  Nick Clifton  <nickc@redhat.com>

	* gas/mn10300/basic.exp: Run pr997 test.
	* gas/mn10300/pr997.s: New test.
	* gas/mn10300/pr887.l: Expected output.

2007-10-17  Nathan Sidwell  <nathan@codesourcery.com>
