@@ -1,0 +1,8 @@
+#as: -mregnames
+#objdump: -s -j .text
+#name: PowerPC symbolic regnames
+
+.*
+
+Contents of section \.text:
+ 0000 4fbdcb82 88850004 .*
