@@ -1,0 +1,3 @@
+	.text
+	cror 4*%cr7+gt,%cr7*4+gt,4*%cr6+gt
+	lbz r4,4(r5)
